--- a/resources/app/components/kec5/colors/colors.html
+++ b/resources/app/components/kec5/colors/colors.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" type="text/css" href="resources/app/components/kec5/colors/colors.css">
 
-<div class="brick" ng-model="vm.counter" ng-style="vm.changeColor()"></div>
+<div class="brick" ng-model="vm.counter" ng-style="vm.changeColor()">
+    <div class="number" ng-if="vm.showHint()">{{vm.counter}}</div>
+</div>
 
 <div class="brick1"></div>
 <div class="brick2"></div>
@@ -8,4 +10,5 @@
 
 <div class="brick4"></div>
 <div class="brick5"></div>
+<div class="brick6"></div>
 <div class="brick6"></div>
